apps/nginx-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo
  labels:
    app: nginx-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-demo
  template:
    metadata:
      labels:
        app: nginx-demo
    spec:
      containers:
        - name: tflocal
          image: acrtflocaltestweu.azurecr.io/lomobuu/tflocal:main
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets"
              readOnly: true

      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: keyvault-secrets
